service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dictionary-map-viewer
  labels:
    app: dictionary-map-viewer
spec:
  ports:
  - port: 3838
    targetPort: 3838
    protocol: TCP
    name: http
  selector:
    app: dictionary-map-viewer
