route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: dictionary-map-viewer
spec:
  to:
    kind: Service
    name: dictionary-map-viewer
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
